--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1>Odin Recipes</h1>
   <ul>
     <li><a href="recipes/pad-thai.html">Pad Thai</a></li>
+    <li><a href="recipes/deviled-eggs.html">Deviled Eggs</a></li>
+    <li><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
   </ul>
 </body>
 </html>
