--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Pad Thai</h1>
-  <img src="https://www.allrecipes.com/thmb/74gBfJO2jOrHy2MUQ7rG8v6C4qA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1023388-5b62f9c37d65451a8951981c07150b41.jpg" alt="A plate of Pad Thai">
+  <img src="https://www.allrecipes.com/thmb/74gBfJO2jOrHy2MUQ7rG8v6C4qA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1023388-5b62f9c37d65451a8951981c07150b41.jpg" alt="A plate of pad thai.">
 
   <h3>Description</h3>
   <p>A wildly popular stir-fry dish hailing from Thailand. While there are many possible variations to the dish's sauce,
@@ -47,6 +47,8 @@
     </li>
     <li>Serve and garnish with green onions and roasted peanuts.</li>
   </ol>
+
+  <p>Recipe Credit: https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/</p>
 
 </body>
 </html>
