--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <ul>
+  <ul class="list-none">
     <li><a href="recipes/pad-thai.html">Pad Thai</a></li>
     <li><a href="recipes/deviled-eggs.html">Deviled Eggs</a></li>
     <li><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
