--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -5,50 +5,93 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pad Thai</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-  <h1>Pad Thai</h1>
-  <img src="https://www.allrecipes.com/thmb/74gBfJO2jOrHy2MUQ7rG8v6C4qA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1023388-5b62f9c37d65451a8951981c07150b41.jpg" alt="A plate of pad thai.">
+<body class="bg-sky-50">
+  <header
+    class="w-full flex flex-col justify-end border-b-4 border-b-indigo-500"
+    style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg/1200px-Phat_Thai_kung_Chang_Khien_street_stall.jpg')"
+  >
+    <div>
+      <section>
+        <h1 class="font-bold text-white text-4xl md:text-6xl">Pad Thai</h1>
+      </section>
+    </div>
+  </header>
 
-  <h3>Description</h3>
-  <p>A wildly popular stir-fry dish hailing from Thailand. While there are many possible variations to the dish's sauce,
-  the mainstays are rice noodles, protein/tofu, and scrambled egg. The recipe below is a simplified and quick take.</p>
+  <nav class="sticky top-0 bg-blue-100 py-3 border-b-4 border-b-sky-200 shadow-md">
+    <section class="flex flex-col md:flex-row justify-between text-sm">
+      <div class="flex justify-between">
+        <span class="font-bold md:mr-4">
+          <a href="../index.html">Odin Recipes</a>
+        </span>
+        <span>
+          <a href="https://github.com/a-marquez" target="_blank">@a-marquez</a>
+        </span>
+      </div>
+      <div>
+        <ul class="flex flex-col md:flex-row list-none">
+          <li class="md:mx-2"><a href="./pad-thai.html">Pad Thai</a></li>
+          <li class="md:mx-2"><a href="./deviled-eggs.html">Deviled Eggs</a></li>
+          <li class="md:mx-2"><a href="./spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
+        </ul>
+      </div>
+    </section>
+  </nav>
 
-  <h3>Ingredients</h3>
-  <ul>
-    <li>Kosher salt </li>
-    <li>8 oz. wide rice noodles </li>
-    <li>2 tbsp. lime juice </li>
-    <li>2 tbsp. brown sugar</li>
-    <li>1 tbsp. fish sauce</li>
-    <li>1 tbsp. low-sodium soy sauce</li>
-    <li>1/4 tsp. cayenne pepper</li>
-    <li>2 tbsp. vegetable oil</li>
-    <li>1 bell pepper, thinly sliced</li>
-    <li>2 cloves garlic, minced</li>
-    <li>2 eggs, lightly whisked</li>
-    <li>1 lb. shrimp, peeled and deveined</li>
-    <li>Freshly ground black pepper</li>
-    <li>2 green onions, thinly sliced</li>
-    <li>1/4 c. roasted peanuts, chopped</li>
-  </ul>
+  <main class="">
+    <section class="my-6 p-3 bg-white shadow-md border-slate-300 border-4 rounded-tr-3xl rounded-bl-3xl">
+      <h3>Description</h3>
+      <p>A wildly popular stir-fry dish hailing from Thailand. While there are many possible variations to the dish's sauce,
+      the mainstays are rice noodles, protein/tofu, and scrambled egg. The recipe below is a simplified and quick take.</p>
+    </section>
 
-  <h3>Steps</h3>
-  <ol>
-    <li>Use a large pot of salted boiling water to cook the noodles. Aim for al dente. Drain the pot.</li>
-    <li>Gather lime juice, fish sauce, soy sauce, cayenne pepper, and brown sugar in a small bowl. Whisk ingredents together </li>
-    <li>Add oil to a large nonstick pan and heat over medium-high heat. Add and cook bell peppers for about 4 minutes.
-    Add garlic, stir and cook until garlic produces aroma, for about 1 minute. Add the shrimp and cook until pink, this should take
-    about 2 minutes each side. Season the shrimp with salt and pepper.
-    </li>
-    <li>Push aside the veggies and shrimp to make space for the egg. Pour egg in and scramble until just set, then combine
-    the eggs with the rest of the dish. Add cooked noodles and stir and toss until fully incorporated. Pour in the sauce mixture
-    from earlier and toss to coat the noodles.
-    </li>
-    <li>Serve and garnish with green onions and roasted peanuts.</li>
-  </ol>
+    <section class="my-6 p-3 bg-white shadow-md border-orange-300 border-4 rounded-tr-3xl rounded-bl-3xl">
+      <h3>Ingredients</h3>
+      <ul>
+        <li>Kosher salt </li>
+        <li>8 oz. wide rice noodles </li>
+        <li>2 tbsp. lime juice </li>
+        <li>2 tbsp. brown sugar</li>
+        <li>1 tbsp. fish sauce</li>
+        <li>1 tbsp. low-sodium soy sauce</li>
+        <li>1/4 tsp. cayenne pepper</li>
+        <li>2 tbsp. vegetable oil</li>
+        <li>1 bell pepper, thinly sliced</li>
+        <li>2 cloves garlic, minced</li>
+        <li>2 eggs, lightly whisked</li>
+        <li>1 lb. shrimp, peeled and deveined</li>
+        <li>Freshly ground black pepper</li>
+        <li>2 green onions, thinly sliced</li>
+        <li>1/4 c. roasted peanuts, chopped</li>
+      </ul>
 
-  <p>Recipe Credit: https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/</p>
+    </section>
+
+    <section class="my-6 p-3 bg-white shadow-md border-red-300 border-4 rounded-tr-3xl rounded-bl-3xl">
+      <h3>Steps</h3>
+      <ol>
+        <li>Use a large pot of salted boiling water to cook the noodles. Aim for al dente. Drain the pot.</li>
+        <li>Gather lime juice, fish sauce, soy sauce, cayenne pepper, and brown sugar in a small bowl. Whisk ingredents together </li>
+        <li>Add oil to a large nonstick pan and heat over medium-high heat. Add and cook bell peppers for about 4 minutes.
+        Add garlic, stir and cook until garlic produces aroma, for about 1 minute. Add the shrimp and cook until pink, this should take
+        about 2 minutes each side. Season the shrimp with salt and pepper.
+        </li>
+        <li>Push aside the veggies and shrimp to make space for the egg. Pour egg in and scramble until just set, then combine
+        the eggs with the rest of the dish. Add cooked noodles and stir and toss until fully incorporated. Pour in the sauce mixture
+        from earlier and toss to coat the noodles.
+        </li>
+        <li>Serve and garnish with green onions and roasted peanuts.</li>
+      </ol>
+    </section>
+
+    <h5>Credits</h5>
+    <ul>
+      <li class="break-words">Recipe: https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/</li>
+      <li class="break-words">Image: https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg/1200px-Phat_Thai_kung_Chang_Khien_street_stall.jpg</li>
+    </ul>
+  </main>
 
 </body>
 </html>
