--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -104,11 +104,11 @@
 
     <div class="text-xs mx-8 text-slate-500 pb-10">
       <h5 class="font-bold">Credits</h5>
-      <a class="break-words hover:underline inline-block my-2" target="_blank" href="https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/">
+      <a class="break-words hover:underline inline-block my-2 w-full" target="_blank" href="https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/">
         Recipe: https://www.delish.com/cooking/recipe-ideas/recipes/a53823/easy-pad-thai-recipe/
       </a>
       </br>
-      <a class="break-words hover:underline inline-block my-2" target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg/1200px-Phat_Thai_kung_Chang_Khien_street_stall.jpg">
+      <a class="break-words hover:underline inline-block my-2 w-full" target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg/1200px-Phat_Thai_kung_Chang_Khien_street_stall.jpg">
         Image: https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Phat_Thai_kung_Chang_Khien_street_stall.jpg/1200px-Phat_Thai_kung_Chang_Khien_street_stall.jpg
       </a>
     </div>
