--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -89,7 +89,7 @@
       </h3>
       <ol class="list-decimal mr-4 ml-8 my-4">
         <li class="my-4">Use a large pot of salted boiling water to cook the noodles. Aim for al dente. Drain the pot.</li>
-        <li class="my-4">Gather lime juice, fish sauce, soy sauce, cayenne pepper, and brown sugar in a small bowl. Whisk ingredents together </li>
+        <li class="my-4">Gather lime juice, fish sauce, soy sauce, cayenne pepper, and brown sugar in a small bowl. Whisk ingredents together.</li>
         <li class="my-4">Add oil to a large nonstick pan and heat over medium-high heat. Add and cook bell peppers for about 4 minutes.
         Add garlic, stir and cook until garlic produces aroma, for about 1 minute. Add the shrimp and cook until pink, this should take
         about 2 minutes each side. Season the shrimp with salt and pepper.
