Tweak spaghetti instructions

--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -95,7 +95,7 @@
         <li class="my-4">Add in the ground beef. Using a wooden spoon break it into smaller chunks. Cook, stirring frequently, until it is browned, 7-8 minutes.</li>
         <li class="my-4">Add the garlic, dried oregano, bundle thyme, salt, pepper, bay leaf, red wine, and chicken stock. Give everything a stir. Bring it to a simmer.</li>
         <li class="my-4">Reduce the heat to medium-low, put the lid on, and let it to cook for 20-25 minutes, making sure to stir occasionally.</li>
-        <li class="my-4">Meanwhile, bring a large pot of salted water to boil and cook the spaghetti according to the instructions on its package. *Please read the Pro Tip below*</li>
+        <li class="my-4">Meanwhile, bring a large pot of salted water to boil and cook the spaghetti according to the instructions on its package.</li>
         <li class="my-4">Once the spaghetti is ready, drain it in a colander.</li>
         <li class="my-4">Discard the thyme bundle and the bay leaf from the Bolognese sauce.</li>
         <li class="my-4">Add drained pasta into the sauce. Stir it all together making sure that the pasta is generously coated with the sauce.</li>
