--- a/recipes/deviled-eggs.html
+++ b/recipes/deviled-eggs.html
@@ -55,7 +55,7 @@
     </section>
 
     <section class="my-6 bg-white overflow-hidden shadow-md border-orange-300 border-4 rounded-tr-2xl rounded-bl-2xl">
-      <h3 class="bg-orange-100 p-4 font-bold border-b-4 border-orange-300 text-orange-800 flex justify-between">
+      <h3 class="bg-orange-100 p-4 font-bold text-orange-800 flex justify-between">
         Ingredients
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
           <path fill-rule="evenodd" d="M2.625 6.75a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0A.75.75 0 018.25 6h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75zM2.625 12a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zM7.5 12a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12A.75.75 0 017.5 12zm-4.875 5.25a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
